force-app/main/default/objects/Opportunity/fields/Application_Prepared_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Prepared_Date__c</fullName>
    <description>Date when the resume package was generated for this opportunity</description>
    <label>Application Prepared</label>
    <type>DateTime</type>
</CustomField>