force-app/main/default/objects/Opportunity/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <description>Date and time when the application email was sent to the company</description>
    <label>Application Submitted</label>
    <type>DateTime</type>
</CustomField>