force-app/main/default/objects/Opportunity/fields/Interview_Completed__c.field-meta.xml
<CustomField>
    <fullName>Interview_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the interview has been completed. Auto-set when Event.EndDateTime passes. This field syncs with Job_Posting__c.Interview_Completed__c</description>
    <label>Interview Completed</label>
    <type>Checkbox</type>
</CustomField>