force-app/main/default/objects/Opportunity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date and time when the interview is scheduled. This field syncs with Job_Posting__c.Interview_Date__c</description>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>