force-app/main/default/objects/Opportunity/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <description>Post-interview reflections, how it went, red/green flags identified during interview. Can be auto-populated from Einstein Conversation Insights transcripts. This field syncs with Job_Posting__c.Interview_Feedback__c</description>
    <label>Interview Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>