force-app/main/default/objects/Opportunity/fields/Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Notes__c</fullName>
    <description>Pre-interview preparation notes, research about company, questions to ask. This field syncs with Job_Posting__c.Interview_Notes__c</description>
    <label>Interview Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>