force-app/main/default/objects/Opportunity/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <description>Lookup relationship to the Job Posting that generated this opportunity</description>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>