force-app/main/default/objects/Opportunity/recordTypes/Job_Search_Application.recordType-meta.xml
<RecordType>
    <fullName>Job_Search_Application</fullName>
    <active>true</active>
    <description>Record type for job search application tracking</description>
    <label>Job Search Application</label>
</RecordType>